--- a/.gitignore
+++ b/.gitignore
@@ -103,7 +103,14 @@ dist
 # TernJS port file
 .tern-port
 
-dist
+
 dist-types
 
-.yarn
+# Yarn 3 files
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
