--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,9 @@
 {
   "extends": "@backstage/cli/config/tsconfig.json",
-  "include": [
-    "src"
-  ],
-  "exclude": ["**/*.d.ts", "dist", "node_modules"],
+  "include": ["src"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
     "outDir": "dist-types",
-    "rootDir": ".",
+    "rootDir": "."
   }
 }
